--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sendgrid/mail": "^8.1.6",
+    "@sentry/node": "^10.34.0",
+    "@sentry/tracing": "^7.120.4",
     "@tanstack/react-query": "^5.90.2",
     "@trpc/client": "^11.6.0",
     "@trpc/react-query": "^11.6.0",
