--- a/package.json
+++ b/package.json
@@ -55,12 +55,16 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cookie": "^1.0.2",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
+    "dotenv-safe": "^9.1.0",
     "drizzle-orm": "^0.44.5",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
     "framer-motion": "^12.23.22",
+    "helmet": "^8.1.0",
     "html2pdf.js": "^0.14.0",
     "ical-generator": "^10.0.0",
     "input-otp": "^1.4.2",
