--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "mysql2": "^3.15.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
+    "node-cache": "^5.1.2",
     "nodemailer": "^7.0.12",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
