Checkpoint: Fixed .renderignore to NOT exclude the dist/ directory. The dist directory is generated during the build process and must be included in the Render deployment. This fixes the ENOENT error where dist/public/index.html was missing on Render.

--- a/.renderignore
+++ b/.renderignore
@@ -3,8 +3,7 @@
 .env.development
 .env.test
 
-# Build artifacts
-dist
+# Build artifacts (dist is generated during build, don't ignore)
 node_modules
 .vite
 
