--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: ologywood
     env: node
     plan: standard
-    buildCommand: pnpm install && pnpm build
-    startCommand: npm start
+    buildCommand: pnpm install --frozen-lockfile && pnpm build && echo "Build complete"
+    startCommand: node dist/index.js
     envVars:
       - key: NODE_ENV
         value: production
