--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: ologywood
     env: node
     plan: standard
-    buildCommand: pnpm install --frozen-lockfile && pnpm build && echo "Build complete"
-    startCommand: node dist/index.js
+    buildCommand: cd /opt/render/project && pnpm install --frozen-lockfile && pnpm build
+    startCommand: cd /opt/render/project && node dist/index.js
     envVars:
       - key: NODE_ENV
         value: production
