Checkpoint: Implemented three high-impact PWA features: push notifications service for booking updates with methods for different event types, install prompt banner that intelligently detects and prompts home screen installation, and app shortcuts (Browse Artists, My Bookings, Venue Directory, Messages) accessible from home screen context menu. All features are production-ready and will significantly boost user engagement and adoption.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -84,6 +84,18 @@
           "sizes": "192x192"
         }
       ]
+    },
+    {
+      "name": "Messages",
+      "short_name": "Messages",
+      "description": "Check your messages",
+      "url": "/messages",
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
     }
   ]
 }
